--- a/styles/_components/_account.scss
+++ b/styles/_components/_account.scss
@@ -41,7 +41,7 @@
   .wallet-info {
     position: absolute;
     width: 263px;
-    margin-top:-8px;
+    margin-top: -8px;
     padding: 18px 32px 33px;
     border: 1px solid #E58410;
     border-top: none;
@@ -51,6 +51,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #142233;
+
+    z-index: 300;
 
     &-address {
       display: flex;
@@ -92,21 +95,21 @@
       width: 100%;
       display: flex;
       flex-flow: row wrap;
-      justify-content: space-between;
       font-weight: normal;
       font-size: 12px;
       color: #fff;
       margin-top: 24px;
 
       &-token {
-        width: calc(50% - 5px);
+        width: 100%;
         height: 19px;
         background: rgba(255, 255, 255, 0.04);
         border-radius: 3px;
         margin-bottom: 4px;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
+        padding: 0px 10px;
       }
     }
 
