--- a/styles/_components/index.scss
+++ b/styles/_components/index.scss
@@ -1,7 +1,10 @@
 @import 'account';
 @import 'button';
+@import 'banner';
+@import 'amount_view';
 
 @import '_viewcontainer';
 @import '_deposit_amount_input';
+@import '_withdraw_amount_input';
 
 @import '_modal';
