--- a/styles/_components/_account.scss
+++ b/styles/_components/_account.scss
@@ -1,36 +1,39 @@
 .connnect-wallet-button-container {
   display: block;
-  width: 263px;
+  width: 240px;
 
   &.full-width {
     width: 100%;
   }
 
-
   .wallet-button {
     width: 100%;
-    height: 47px;
+    height: 45px;
     padding: 8px;
-    border-radius: 8px;
+    border-radius: 30px;
     border: none;
     outline: none;
-    font-size: 16px;
     font-weight: 500;
+    font-size: 20px;
   }
 
   .not-connected {
-    background: #E58410;
-    color: #fff;
+    background: #37FAD3;
+    color: #20253B;
   }
 
   .connected {
-    background: #142233;
-    border: 1px solid #E58410;
+    background: #262B43;
+    border: 1px solid #37FAD3;
     box-shadow: 1px 1px 20px rgba(255, 134, 0, 0.1);
-    color: #fff;
+    color: #37FAD3;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 276px;
+    position: absolute;
+
+    z-index: 400;
   }
 
   img {
@@ -40,30 +43,32 @@
 
   .wallet-info {
     position: absolute;
-    width: 263px;
-    margin-top: -8px;
-    padding: 18px 32px 33px;
-    border: 1px solid #E58410;
+    width: 276px;
+    padding: 24px 0px 0px;
     border-top: none;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 13px;
+    border-bottom-right-radius: 13px;
     color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #142233;
+    background: #262B43;
+    margin-top: 23px;
 
     z-index: 300;
 
     &-address {
       display: flex;
       margin-top: 20px;
+      width: 100%;
+      padding: 0px 30px;
+      justify-content: space-between;
 
       .circle {
         width: 15px;
         height: 15px;
-        background: #cb7815;
-        border: 3px solid #704d24;
+        background: #37FAD3;
+        border: 3px solid #2f928b;
         border-radius: 7.5px;
       }
 
@@ -71,7 +76,7 @@
         font-weight: 500;
         font-size: 12px;
         color: #fff;
-        padding-left: 7px;
+        padding-left: 12px;
       }      
     }
 
@@ -98,32 +103,32 @@
       font-weight: normal;
       font-size: 12px;
       color: #fff;
-      margin-top: 24px;
+      margin-top: 12px;
 
       &-token {
         width: 100%;
         height: 19px;
-        background: rgba(255, 255, 255, 0.04);
         border-radius: 3px;
         margin-bottom: 4px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding: 0px 10px;
+        padding: 0px 30px;
       }
     }
 
     .wallet-disconnect-button {
-      background: #FFFFFF;
-      border-radius: 8px;
-      height: 29px;
-      width: 155px;
-      color: #142233;
+      background: #B6B2EF;
+      border-bottom-left-radius: 13px;
+      border-bottom-right-radius: 13px;
+      height: 38px;
+      width: 100%;
+      color: #20253B;
       font-weight: 500;
       font-size: 12px;
       border: none;
       outline: none;
-      margin-top: 26px;
+      margin-top: 16px;
     }
   }
 }
