--- a/styles/libraries/_variables.scss
+++ b/styles/libraries/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700;800;900&display=swap');
 
 // Colors - Reference (These come from styleguide)
 $blue-light: #92ccf0;
@@ -56,7 +56,7 @@ $white: #fff;
 $dolphin-light: #b3b6c5;
 $slate: #8f949d;
 
-$header-height: 150px;
+$header-height: 107px;
 
 // Borders
 $border-radius-sm: 0.5rem;
@@ -76,7 +76,7 @@ $padding-lg: 2rem; // 32px
 $padding-xlg: 3rem; // 48px
 
 // Font - Variations
-$font-family-ubuntu: 'Ubuntu', sans-serif;
+$font-family-default: 'Fira Sans', sans-serif;
 
 // Font - Sizes
 $font-size-xs: 0.8125rem; // 13px
