update withdraw confirm view

--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -152,7 +152,7 @@
       color: #60699e;
 
       &.selected {
-        background: #FFFFFF;
+        background: #B6B2EF;
         border: 1px solid #B6B2EF;
         color: #20253B;
       }
