--- a/styles/_components/_modal.scss
+++ b/styles/_components/_modal.scss
@@ -24,32 +24,21 @@
 }
 
 .modal-content {
-  min-width: 450px;
+  max-width: 90%;
+  width: 653px;
   display: flex;
   flex-direction: column;
   margin: auto;
 
   position: relative;
-  padding: 24px;
+  padding: 34px;
   box-sizing: border-box;
 
   $border: 2px;
-  color: #FFF;
-  background: #162537;
-  background-clip: padding-box; /* !importanté */
-  border: solid $border transparent; /* !importanté */
-  border-radius: 13px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: -1;
-    margin: -$border; /* !importanté */
-    border-radius: inherit; /* !importanté */
-    background: linear-gradient(180deg, #FF6F03 0%, rgba(51, 63, 95, 1) 100%);
-  }
-
+  color: #fff;
+  background: #262b43;
+  border: none;
+  border-radius: 30.9518px;
 }
 
 .modal-header {
@@ -59,13 +48,13 @@
 }
 
 .modal-header-close {
+  position: absolute;
   width: 34px;
   height: 34px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #FFFFFF;
-  border-radius: 8px;
+  cursor: pointer;
 
   svg {
     width: 12px;
@@ -75,8 +64,8 @@
 
 .modal-view-title {
   font-weight: bold;
-  font-size: 20px;
-  color: #FFFFFF;
+  font-size: 24px;
+  color: #ffffff;
 }
 
 .modal-select-wallet {
@@ -84,27 +73,29 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 20px 40px;
+  padding: 10px 0px 20px;
 
   .modal-choose-wallet-list {
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 51px;
+    margin-bottom: 50px;
   }
 
   .wallet-choose-item {
     cursor: pointer;
-    height: 90px;
-    border: 1px solid rgba(140, 154, 191, 1);
-    border-radius: 8px;
-    padding: 0px 40px;
+    height: 100px;
+    border-radius: 30.9518px;
     display: flex;
     align-items: center;
-    margin-top: 20px;
+    justify-content: flex-start;
+    background: #313650;
+    margin-top: 32px;
 
     img {
       margin-right: 12px;
+      margin-left: 139px;
     }
 
     .wallet-choose-item-text {
@@ -113,14 +104,15 @@
     }
 
     .wallet-choose-item-name {
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 28px;
+      font-weight: 700;
+      font-size: 26px;
+      line-height: 31px;
     }
 
     .wallet-choose-item-sub {
       font-weight: normal;
-      font-size: 12px;
+      font-size: 14px;
+      line-height: 100%;
       padding-top: 4px;
     }
   }
