--- a/styles/_components/_deposit_amount_input.scss
+++ b/styles/_components/_deposit_amount_input.scss
@@ -11,18 +11,22 @@
   .label {
     font-size: 16px;
     font-weight: 500;
-    color: #60699E;
+    color: #60699e;
 
     @media screen and (max-width: 500px) {
       display: none;
     }
   }
-  
+
   .divider {
     height: 24px;
     width: 1px;
-    background: #fff;
+    background: transparent;
     margin-left: 28px;
+
+    &.focus {
+      background: #fff;
+    }
 
     @media screen and (max-width: 500px) {
       display: none;
@@ -45,7 +49,7 @@
   }
 
   .max-button {
-    background: #FFF;
+    background: #fff;
     border-radius: 34px;
     width: 55.05px;
     height: 29.98px;
@@ -53,7 +57,7 @@
     font-size: 12px;
     border: none;
     outline: none;
-    color: #262B43;
+    color: #262b43;
     margin-left: 23px;
   }
 }
