update ukraine banner

--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -65,8 +65,11 @@
     }
 
     .content {
-      font-weight: bold;
-      font-size: 12px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 21px;
+      margin: 0;
+      margin-top: 8px;
     }
 
     .donate {
