--- a/styles/_components/_withdraw_amount_input.scss
+++ b/styles/_components/_withdraw_amount_input.scss
@@ -76,6 +76,7 @@
       border: 2.01897px solid #60699e;
       outline: none;
       margin-left: 4px;
+      cursor: pointer;
 
       &.selected {
         background: #b6b2ef;
