--- a/styles/_components/_deposit_amount_input.scss
+++ b/styles/_components/_deposit_amount_input.scss
@@ -11,22 +11,7 @@
   .label {
     font-size: 16px;
     font-weight: 500;
-    color: #60699e;
-
-    @media screen and (max-width: 500px) {
-      display: none;
-    }
-  }
-
-  .divider {
-    height: 24px;
-    width: 1px;
-    background: transparent;
-    margin-left: 28px;
-
-    &.focus {
-      background: #fff;
-    }
+    color: #b6b2ef;
 
     @media screen and (max-width: 500px) {
       display: none;
@@ -35,7 +20,8 @@
 
   .input {
     flex: 1;
-    margin-left: 5px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .inputbox {
@@ -44,12 +30,12 @@
     border: none;
     outline: none;
     color: #fff;
-    font-weight: bold;
-    font-size: 24px;
+    font-weight: 700;
+    font-size: 34px;
   }
 
   .max-button {
-    background: #fff;
+    background: #b6b2ef;
     border-radius: 34px;
     width: 55.05px;
     height: 29.98px;
