--- a/styles/_components/_deposit_amount_input.scss
+++ b/styles/_components/_deposit_amount_input.scss
@@ -8,13 +8,18 @@
   border-radius: 51.5863px;
   padding: 0px 69px;
 
+  @media screen and (max-width: 768px) {
+    height: 50px;
+    padding: 0px 35px;
+  }
+
   .label {
     font-size: 16px;
     font-weight: 500;
     color: #b6b2ef;
 
-    @media screen and (max-width: 500px) {
-      display: none;
+    @media screen and (max-width: 768px) {
+      font-size: 10px;
     }
   }
 
@@ -22,6 +27,11 @@
     flex: 1;
     margin-left: 30px;
     margin-right: 30px;
+
+    @media screen and (max-width: 768px) {
+      margin-left: 20px;
+      margin-right: 20px;
+    }
   }
 
   .inputbox {
@@ -32,6 +42,10 @@
     color: #fff;
     font-weight: 700;
     font-size: 34px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 16px;
+    }
   }
 
   .max-button {
@@ -44,7 +58,12 @@
     border: none;
     outline: none;
     color: #262b43;
-    margin-left: 23px;
     cursor: pointer;
+
+    @media screen and (max-width: 768px) {
+      width: 29.56px;
+      height: 16.21px;
+      font-size: 8px;
+    }
   }
 }
