--- a/styles/_pages/index.scss
+++ b/styles/_pages/index.scss
@@ -6,5 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column-reverse;
+    }
   }
 }
