--- a/styles/_pages/index.scss
+++ b/styles/_pages/index.scss
@@ -12,4 +12,18 @@
       flex-direction: column-reverse;
     }
   }
+
+  .banner-wrapper {
+    width: 100%;
+    max-width: 1158px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      margin-top: 20px;
+    }
+  }
 }
