--- a/styles/_components/_amount_view.scss
+++ b/styles/_components/_amount_view.scss
@@ -11,20 +11,11 @@
     border-radius: 29px;
   }
 
-  &.icon {
-    height: 90px;
-    border-radius: 45px;
-
-    @media screen and (max-width: 768px) {
-      height: 50px;
-      border-radius: 28.5976px;
-    }
-  }
-
   &.vertical {
     flex-direction: column;
-    height: 140px;
-    border-radius: 70px;
+    height: 110px;
+    border-radius: 55px;
+    margin-bottom: 30px;
 
     @media screen and (max-width: 768px) {
       height: 75.03px;
@@ -54,7 +45,7 @@
     font-size: 20px;
 
     @media screen and (max-width: 768px) {
-      font-size: 10px;
+      font-size: 13px;
     }
   }
 
@@ -66,7 +57,7 @@
 
     @media screen and (max-width: 768px) {
       font-size: 16px;
-       padding-left: 4px;
+      padding-left: 4px;
     }
 
     &.highlight {
@@ -74,7 +65,7 @@
     }
 
     &.vertical {
-      padding-top: 20px;
+      padding-top: 10px;
 
       @media screen and (max-width: 768px) {
         padding-top: 5px;
@@ -83,7 +74,7 @@
   }
 
   .amount-view-icon {
-    height: 61px;
+    height: 48px;
 
     @media screen and (max-width: 768px) {
       height: 31.07px;
