--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -1,4 +1,4 @@
-.banner-container {
+.attention-banner-container {
   width: 100vw;
   max-width: 100%;
   height: 50px;
@@ -8,12 +8,12 @@
   background: #caeb70;
   padding: 10px;
 
-  .banner-icon {
+  .attention-banner-icon {
     height: 17px;
     margin-right: 12px;
   }
 
-  .banner-text {
+  .attention-banner-text {
     font-weight: 500;
     font-size: 16px;
     color: #20253b;
@@ -32,33 +32,37 @@
 }
 
 .ukraine-container-wrapper {
-  padding: 0px 67px;
+  // padding: 0px 67px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  width: calc(50% - 14px);
+  max-width: 560px;
+  margin-left: 28px;
 
   @media screen and (max-width: 768px) {
-    padding: 0px;
+    width: 100vw;
+    max-width: 100%;
+    margin-left: 0px;
+    margin-top: 20px;
   }
 
   @media screen and (max-width: 460px) {
-    margin-top: 60px;
+    margin-top: 40px;
   }
 
   .ukraine-container {
     display: flex;
-    width: 653px;
+    width: 100%;
     background: #053c8a;
     border-radius: 11px;
-    height: 100px;
-    margin-left: 495px;
+    height: 123px;
     color: #fff;
 
     @media screen and (max-width: 768px) {
       width: 100%;
       margin-left: 0px;
-      height: 75.77px;
+      // height: 75.77px;
     }
 
     @media screen and (max-width: 425px) {
@@ -70,12 +74,12 @@
   .ukraine-icon {
     position: absolute;
     height: 184px;
-    margin-top: -40px;
+    margin-top: -20px;
 
-    @media screen and (max-width: 768px) {
-      height: 131.58px;
-      margin-top: -27px;
-    }
+    // @media screen and (max-width: 768px) {
+    //   height: 131.58px;
+    //   margin-top: -27px;
+    // }
 
     @media screen and (max-width: 425px) {
       height: 80px;
@@ -84,15 +88,15 @@
 
   .banner-content {
     width: 313px;
-    margin-left: 247px;
+    margin-left: 217px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    @media screen and (max-width: 768px) {
-      margin-left: 157px;
-    }
+    // @media screen and (max-width: 768px) {
+    //   margin-left: 157px;
+    // }
 
     @media screen and (max-width: 425px) {
       margin-left: 90px;
@@ -103,7 +107,7 @@
       font-size: 24px;
       margin: 0px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 425px) {
         font-size: 16px;
       }
     }
@@ -123,6 +127,72 @@
 
     .donate {
       color: #efce2b;
+    }
+  }
+}
+
+.defi-banner-container {
+  width: calc(50% - 14px);
+  max-width: 560px;
+  background: #313650;
+  border-radius: 11px;
+  height: 123px;
+  display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 768px) {
+    width: 100vw;
+    max-width: 100%;
+  }
+
+  @media screen and (max-width: 425px) {
+    height: 75px;
+    margin-top: 40px;
+  }
+
+  .defi-banner-defi {
+    height: 43.7px;
+    margin-left: 63px;
+
+    @media screen and (max-width: 1200px) {
+      // height: 23.7px;
+      margin-left: 43px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      // height: 23.7px;
+      margin-left: 23px;
+    }
+
+    @media screen and (max-width: 425px) {
+      height: 23.7px;
+      margin-left: 10px;
+    }
+  }
+
+  .defi-banner-text {
+    font-size: 18.8413px;
+    line-height: 25px;
+    color: #ffffff;
+    padding-left: 14px;
+    display: inline-block;
+    flex: 1;
+
+    @media screen and (max-width: 425px) {
+      font-size: 12px;
+      line-height: 13px;
+    }
+  }
+
+  .defi-banner-bear {
+    height: 130px;
+    margin-bottom: 7px;
+    justify-self: flex-end;
+    margin-right: 10px;
+
+    @media screen and (max-width: 425px) {
+      height: 75px;
+      margin-bottom: 0px;
     }
   }
 }
