--- a/styles/_components/_account.scss
+++ b/styles/_components/_account.scss
@@ -5,6 +5,10 @@
     width: 200px;
   }
 
+  @media screen and (max-width: 500px) {
+    width: 100%;
+  }
+
   &.full-width {
     width: 100%;
   }
@@ -24,6 +28,11 @@
       font-size: 10px;
       height: 45px;
       height: 21.93px;
+    }
+
+    @media screen and (max-width: 500px) {
+      font-size: 13px;
+      height: 30px;
     }
   }
 
@@ -47,6 +56,10 @@
 
     @media screen and (max-width: 768px) {
       width: 200px;
+    }
+
+    @media screen and (max-width: 500px) {
+      width: calc(100vw - 66px);
     }
   }
 
@@ -76,6 +89,11 @@
 
     @media screen and (max-width: 768px) {
       width: 200px;
+      padding: 0px;
+    }
+
+    @media screen and (max-width: 500px) {
+      width: calc(100vw - 66px);
       padding: 0px;
     }
 
