--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -145,6 +145,10 @@
     max-width: 100%;
   }
 
+  @media screen and (max-width: 500px) {
+    margin-top: 40px;
+  }
+
   @media screen and (max-width: 425px) {
     height: 75px;
     margin-top: 40px;
