--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,12 +1,16 @@
 @import "libraries/global";
 
 .layout-container {
+  width: 100vw;
+  max-width: 100%;
+
   &__header {
     padding: 0px 134px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 78px;
+    width: 100%;
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
@@ -28,6 +32,13 @@
         justify-content: center;
         margin-top: 30px;
         flex-flow: row wrap;
+      }
+
+      @media screen and (max-width: 500px) {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 30px;
       }
     }
 
@@ -51,6 +62,13 @@
         font-size: 10px;
         height: 21.93px;
         margin-bottom: 10px;
+      }
+
+      @media screen and (max-width: 500px) {
+        font-size: 13px;
+        height: 30px;
+        margin-bottom: 10px;
+        margin-right: 0px;
       }
 
       img {
