--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -34,73 +34,57 @@
 .ukraine-container-wrapper {
   // padding: 0px 67px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: calc(50% - 14px);
-  max-width: 560px;
-  margin-left: 28px;
+  justify-content: flex-end;
+  width: 516px;
+  height: 155px;
+
+  position: fixed;
+  right: 31px;
+  bottom: 71px;
+
+  cursor: pointer;
 
   @media screen and (max-width: 768px) {
     width: 100vw;
     max-width: 100%;
-    margin-left: 0px;
-    margin-top: 20px;
+    height: 100px;
+    right: 0px;
+    bottom: 0px;
   }
 
-  @media screen and (max-width: 460px) {
-    margin-top: 40px;
+  .ukraine-banner-close {
+    position: absolute;
+    margin-right: 15px;
+    margin-top: 15px;
+    color: #fff;
   }
 
   .ukraine-container {
     display: flex;
     width: 100%;
+    height: 100%;
+    
     background: #053c8a;
     border-radius: 11px;
-    height: 123px;
     color: #fff;
 
     @media screen and (max-width: 768px) {
       width: 100%;
-      margin-left: 0px;
-      // height: 75.77px;
-    }
-
-    @media screen and (max-width: 425px) {
-      height: 130px;
-      padding-right: 10px;
+      border-radius: 0px;
     }
   }
 
   .ukraine-icon {
-    position: absolute;
-    height: 184px;
-    margin-top: -20px;
-
-    // @media screen and (max-width: 768px) {
-    //   height: 131.58px;
-    //   margin-top: -27px;
-    // }
-
-    @media screen and (max-width: 425px) {
-      height: 80px;
-    }
+    height: 100%;
   }
 
   .banner-content {
     width: 313px;
-    margin-left: 217px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    // @media screen and (max-width: 768px) {
-    //   margin-left: 157px;
-    // }
-
-    @media screen and (max-width: 425px) {
-      margin-left: 90px;
-    }
+    margin-right: 36px;
 
     .title {
       font-weight: bold;
