--- a/styles/_components/_deposit_amount_input.scss
+++ b/styles/_components/_deposit_amount_input.scss
@@ -25,11 +25,11 @@
 
   .input {
     flex: 1;
-    margin-left: 30px;
+    // margin-left: 30px;
     margin-right: 30px;
 
     @media screen and (max-width: 768px) {
-      margin-left: 20px;
+      // margin-left: 20px;
       margin-right: 20px;
     }
   }
