--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -94,7 +94,7 @@
   font-size: 12px;
   line-height: 16px;
   padding: 24px 47px 17px;
-  color: #ffffff;
+  color: #60699E;
 
   @media screen and (max-width: 768px) {
     padding: 20px 19px 7px;
