--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -102,6 +102,8 @@
     font-size: 16px;
     line-height: 18px;
     padding: 6px 0px;
+    display: flex;
+    align-items: center;
 
     @media screen and (max-width: 768px) {
       font-size: 13px;
