--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -57,6 +57,11 @@
     margin-right: 15px;
     margin-top: 15px;
     color: #fff;
+
+    svg {
+      width: 25px;
+      height: 25px;
+    }
   }
 
   .ukraine-container {
