--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -45,11 +45,10 @@
   cursor: pointer;
 
   @media screen and (max-width: 768px) {
-    width: 100vw;
-    max-width: 100%;
-    height: 100px;
-    right: 0px;
-    bottom: 0px;
+    width: calc(100% - 40px);
+    height: 105px;
+    right: 20px;
+    bottom: 20px;
   }
 
   .ukraine-banner-close {
@@ -66,6 +65,7 @@
 
   .ukraine-container {
     display: flex;
+    align-items: center;
     width: 100%;
     height: 100%;
     
@@ -75,16 +75,20 @@
 
     @media screen and (max-width: 768px) {
       width: 100%;
-      border-radius: 0px;
+      border-radius: 7px;
     }
   }
 
   .ukraine-icon {
     height: 100%;
+
+    @media screen and (max-width: 425px) {
+      height: 80%;
+    }
   }
 
   .banner-content {
-    width: 313px;
+    flex: 1;
     height: 100%;
     display: flex;
     flex-direction: column;
