--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -118,7 +118,7 @@
 
     @media screen and (max-width: 768px) {
       font-size: 12px;
-      display: none;
+      // display: none;
     }
   }
 
@@ -147,6 +147,22 @@
         border: 1px solid rgba(255, 111, 3, 1);
       }
     }
+  }
+
+  .amount-edit-button {
+    width: 55.03px;
+    height: 29.23px;
+    background: #b6b2ef;
+    border-radius: 34.3478px;
+    color: #262b43;
+    font-weight: 500;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5px;
   }
 
   &-button {
@@ -184,6 +200,15 @@
 
     &.withdraw {
       background: #b6b2ef;
+    }
+
+    &.loading {
+      background: #b6b2ef;
+      cursor: not-allowed;
+    }
+    img {
+      height: 20px;
+      margin-left: 5px;
     }
   }
 
