--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,15 @@
 :root {
   --toastify-color-progress-light: #ACACAC;
 }
+
+.Toastify__toast-container--bottom-center {
+  @media screen and (max-width: 480px) {
+    width: 90vw;
+    margin-left: 5vw;
+    margin-bottom: 10px;
+  }
+}
+
 @import "libraries/global";
 
 @import "components";
