--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -114,17 +114,23 @@
   justify-content: center;
   align-items: center;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 21px;
-  color: #ffffff;
+
   margin-bottom: 50px;
 
   @media screen and (max-width: 768px) {
     margin-bottom: 25px;
   }
 
-  img {
-    height: 32px;
-    margin-left: 7px;
+  .volume-logo-link {
+    font-size: 20px;
+    line-height: 21px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+
+    img {
+      height: 32px;
+      margin-left: 7px;
+    }
   }
 }
