--- a/styles/_pages/_ukraine.scss
+++ b/styles/_pages/_ukraine.scss
@@ -34,11 +34,11 @@
       width: 100vw;
       max-width: 100%;
       margin-left: 0px;
-      margin-top: 20px;
+      // margin-top: 20px;
     }
 
     @media screen and (max-width: 460px) {
-      margin-top: 40px;
+      // margin-top: 40px;
     }
 
     .ukraine-container {
