--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -31,7 +31,7 @@
   }
 }
 
-.ukraine-bannercontainer-wrapper {
+.ukraine-banner-container-wrapper {
   // padding: 0px 67px;
   display: flex;
   justify-content: flex-end;
@@ -45,7 +45,7 @@
   cursor: pointer;
 
   @media screen and (max-width: 768px) {
-    width: calc(100% - 40px);
+    width: calc(100vw - 40px);
     height: 105px;
     right: 20px;
     bottom: 20px;
