--- a/styles/_components/_banner.scss
+++ b/styles/_components/_banner.scss
@@ -44,6 +44,11 @@
 
   cursor: pointer;
 
+  a {
+    display: inline-block;
+    width: 100%;
+  }
+
   @media screen and (max-width: 768px) {
     width: calc(100vw - 40px);
     height: 105px;
