--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -212,6 +212,26 @@
     }
   }
 
+  .cooldown-notice {
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+
+    &-circle {
+      height: 20px;
+      width: 20px;
+      border-radius: 10px;
+      border: 1.5px solid #37fad3;
+    }
+
+    &-text {
+      font-weight: 500;
+      font-size: 16px;
+      color: #fff;
+      margin-left: 15px;
+    }
+  }
+
   .collect-select {
     width: 100%;
     display: flex;
