--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -220,8 +220,7 @@
     &-circle {
       height: 20px;
       width: 20px;
-      border-radius: 10px;
-      border: 1.5px solid #37fad3;
+      cursor: pointer;
     }
 
     &-text {
