--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -22,6 +22,50 @@
       width: 100%;
       margin-right: 0px;
     }
+
+    .your-liquidity-header {
+      height: 148px;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 36px;
+
+      .your-liquidity-value {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &-title {
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 21px;
+          color: #b6b2ef;
+        }
+
+        &-value {
+          font-weight: 700;
+          font-size: 34px;
+          line-height: 31px;
+          color: #ffffff;
+          margin-top: 4px;
+        }
+      }
+
+      &-border {
+        height: 8px;
+        width: 100%;
+        background: rgba(55, 250, 211, 0.4);
+
+        .insider {
+          width: 75%;
+          height: 8px;
+          background: rgba(55, 250, 211, 1);
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+        }
+      }
+    }
   }
 
   &-header {
