--- a/styles/_components/index.scss
+++ b/styles/_components/index.scss
@@ -2,6 +2,7 @@
 @import 'button';
 @import 'banner';
 @import 'amount_view';
+@import 'donut';
 
 @import '_viewcontainer';
 @import '_deposit_amount_input';
