--- a/styles/_components/_donut.scss
+++ b/styles/_components/_donut.scss
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px 0px;
+    // padding: 10px 0px;
 
     @media screen and (max-width: 1024px) {
       width: 100%;
