--- a/styles/_pages/_event.scss
+++ b/styles/_pages/_event.scss
@@ -77,6 +77,7 @@
     background: #262b43;
     border-radius: 30.9518px;
     padding: 53px 51px;
+    margin-bottom: 30px;
 
     @media screen and (max-width: 768px) {
       padding: 36px 18px;
@@ -221,6 +222,11 @@
     flex: 1;
     margin-left: 25px;
     color: #fff;
+
+    a {
+      color: #fff;
+      text-decoration: underline;
+    }
 
     @media screen and (max-width: 768px) {
       margin-left: 0px;
