--- a/styles/_pages/_ukraine.scss
+++ b/styles/_pages/_ukraine.scss
@@ -57,7 +57,6 @@
 
       @media screen and (max-width: 500px) {
         height: 130px;
-        padding-right: 10px;
       }
     }
 
@@ -90,17 +89,11 @@
       padding: 39px 76px;
       
 
-      @media screen and (max-width: 1024px) {
-        margin-left: 287px;
-      }
-
       @media screen and (max-width: 768px) {
-        margin-left: 240px;
-        margin-right: 20px;
+        padding: 19px 36px;
       }
 
       @media screen and (max-width: 500px) {
-        margin-left: 90px;
       }
 
       .title {
