update ui - total view, poollist, pool view

--- a/styles/_components/index.scss
+++ b/styles/_components/index.scss
@@ -3,6 +3,8 @@
 @import 'banner';
 @import 'amount_view';
 @import 'donut';
+@import 'connection_mask';
+@import 'vault_pool';
 @import 'loading_icon';
 
 @import '_viewcontainer';
