--- a/styles/_components/_amount_view.scss
+++ b/styles/_components/_amount_view.scss
@@ -6,6 +6,10 @@
   background: #313650;
   border-radius: 35px;
 
+  &.kujira {
+    background: #323843;
+  }
+
   @media screen and (max-width: 768px) {
     height: 38.81px;
     border-radius: 29px;
@@ -44,6 +48,10 @@
     font-weight: 500;
     font-size: 20px;
 
+    &.kujira {
+      color: #D3483E;
+    }
+
     @media screen and (max-width: 768px) {
       font-size: 13px;
     }
@@ -61,7 +69,8 @@
     }
 
     &.highlight {
-      color: #37fad3;
+      // color: #37fad3;
+      color: #fff;
     }
 
     &.vertical {
