--- a/styles/_components/_deposit_amount_input.scss
+++ b/styles/_components/_deposit_amount_input.scss
@@ -8,6 +8,10 @@
   border-radius: 51.5863px;
   padding: 0px 69px;
 
+  &.kujira {
+    background: #323843;
+  }
+
   @media screen and (max-width: 768px) {
     height: 50px;
     padding: 0px 35px;
