--- a/styles/_components/_viewcontainer.scss
+++ b/styles/_components/_viewcontainer.scss
@@ -1,17 +1,20 @@
 .view-container {
-  width: 90vw;
-  max-width: 653px;
+  width: 100%;
   background: #262b43;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  // margin-top: 50px;
 
   @media screen and (max-width: 768px) {
     width: 100%;
     max-width: 100%;
     border-radius: 17px;
+  }
+
+  &.kujira {
+    background: #22252E;
   }
 
   &.your-liquidity-panel {
@@ -71,6 +74,15 @@
         }
       }
     }
+  }
+
+  &.add-liquidity-panel {
+    margin-top: 145px;
+  }
+
+  &.pool-list-panel {
+    background: none;
+    margin-top: 25px;
   }
 
   &-header {
@@ -146,7 +158,8 @@
   }
 
   &-subtitle {
-    color: #b6b2ef;
+    // color: #b6b2ef;
+    color: #fff;
     font-weight: 500;
     font-size: 16px;
     line-height: 18px;
