--- a/styles/_components/_connection_mask.scss
+++ b/styles/_components/_connection_mask.scss
@@ -1,6 +1,34 @@
 .connection-mask-container {
-  width: 100%;
   height: 300px;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(32, 37, 59, 0.8);
   position: absolute;
+  border-radius: 30px;
+  width: 483px;
+  min-height: 519px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &.long {
+    min-height: 750px;
+    margin-top: 45px;
+  }
+
+  img {
+    width: 60%;
+  }
+
+  span {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #fff;
+  }
+
+  .connect-wallet-button {
+    margin-top: 20px;
+    width: 65%;
+  }
 }
